[package]
name = "gb_emu"
version = "0.1.0"
authors = ["ozborne132 <ozborne132@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
terminal_size = "0.1.12"
parse_int = "0.4.0"
termion = "1.5.5"
